--- a/src/index.css
+++ b/src/index.css
@@ -340,3 +340,11 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
+
+/* To fix html2pdf styling issues */
+@layer base {
+  img {
+    display: initial;
+  }
+}
+
